--- a/MSIFanControl/es.lproj/Localizable.strings
+++ b/MSIFanControl/es.lproj/Localizable.strings
@@ -2,21 +2,19 @@
   Localizable.strings
   MSIFanControl
 
-  Created by Ivan Soriano Arabia on 26/3/23.
-  Copyright © 2023 lgs3137. All rights reserved.
+  Created by ivansoriarab on 26/3/23.
+  Copyright © 2020 - 2023: lgs3137 - ivansoriarab.
 */
-"关于MSIFanControl" = "Acerca de MSIFanControl";
-"隐藏MSIFanControl" = "Ocultar MSIFanControl";
+"关于 MSI Fan Control" = "Acerca de MSI Fan Control";
+"隐藏 MSI Fan Control" = "Ocultar MSI Fan Control";
 "隐藏其他" = "Ocultar Otros";
 "显示全部" = "Mostrar Todos";
-"退出MSIFanControl" = "Salir de MSIFanControl";
+"退出 MSI Fan Control" = "Salir de MSI Fan Control";
 "窗口" = "Ventana";
 "最小化" = "Minimizar";
 "缩放" = "Zoom";
 "将所有窗口置于顶层" = "Traer todo al frente";
-"切换风扇控制" = "%@ el control del ventilador";
-"启用" = "Activar";
-"禁用" = "Desactivar";
+"设置风扇速度" = "Configurar la velocidad del ventilador";
 "确认" = "Aplicar";
 "请输入0~100数字!" = "Por favor introduzca un número entre 0 y 100";
 "失败!\nMSIECControl 丢失!" = "¡Error!\n ¡No se ha podido encontrar MSIECControl!";
